<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Test Demo</string>
    <string name="action_settings">Settings</string>
    <string name="unable_to_fech_events">Unable to fetch events</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
